CR fixes